@@ -14,6 +14,15 @@ see the ChangeLog file inside the PHPlot distribution.)
 
 <variablelist>
   <varlistentry>
+    <term>2011-01-15</term>
+    <listitem>
+      <para>
+Released updated version of the manual to correspond to PHPlot-5.3.1.
+      </para>
+    </listitem>
+  </varlistentry>
+
+  <varlistentry>
     <term>2011-01-11</term>
     <listitem>
       <para>
